objects/EBS_Integration__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_To__c</fullName>
        <label>Map To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>EBS Integration</label>
    <listViews>
        <fullName>Account</fullName>
        <columns>Object__c</columns>
        <columns>NAME</columns>
        <columns>Field__c</columns>
        <columns>Map__c</columns>
        <columns>Map_To__c</columns>
        <columns>Validate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Address</fullName>
        <columns>Object__c</columns>
        <columns>NAME</columns>
        <columns>Field__c</columns>
        <columns>Map__c</columns>
        <columns>Map_To__c</columns>
        <columns>Validate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Address__c</value>
        </filters>
        <label>Address</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Address_Contact</fullName>
        <columns>Object__c</columns>
        <columns>NAME</columns>
        <columns>Field__c</columns>
        <columns>Map__c</columns>
        <columns>Map_To__c</columns>
        <columns>Validate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Address_Contact__c</value>
        </filters>
        <label>Address Contact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Object__c</columns>
        <columns>NAME</columns>
        <columns>Field__c</columns>
        <columns>Map__c</columns>
        <columns>Map_To__c</columns>
        <columns>Validate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>Object__c</columns>
        <columns>NAME</columns>
        <columns>Field__c</columns>
        <columns>Map__c</columns>
        <columns>Map_To__c</columns>
        <columns>Validate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunity</fullName>
        <columns>Object__c</columns>
        <columns>NAME</columns>
        <columns>Field__c</columns>
        <columns>Map__c</columns>
        <columns>Map_To__c</columns>
        <columns>Validate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity</label>
        <language>en_US</language>
    </listViews>
</CustomObject>